--- a/.github/workflows/dns-tester.yml
+++ b/.github/workflows/dns-tester.yml
@@ -15,7 +15,7 @@ jobs:
     permissions:
       id-token: write
       attestations: write
-    uses: opendeploy-org/dns-logger/.github/workflows/dns-logger.yml@latest
+    uses: opendeploy-org/dns-logger/.github/workflows/dns-logger.yml@main
     with:
       SUBDOMAIN: ${{ inputs.SUBDOMAIN }}
       LOG_DOWNLOAD_URL: ${{ inputs.LOG_DOWNLOAD_URL }}
